# postgresql-dynamic

./: .gitignore  Makefile  default.nix  package.yaml  postgresql-dynamic.cabal  shell.nix
src/Database/PostgreSQL/Simple/: Dynamic.hs
