cabal-version:       2.2
name:                postgresql-dynamic
version:             0.1.0.0
synopsis:            Read rows from Postgres into 'Map Text Dynamic'
description: Load all columns returned by Postgres into a generic key-value map.  This is useful for interactive development, when exploring the database schema, or before it's clear which columns will be needed.
homepage:            github.com/bergey/postgresql-dynamic
bug-reports:    github.com/bergey/postgresql-dynamic/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:
category:            Database

Source-repository head
  type:     git
  location: http://github.com/bergey/STL.git

library
  exposed-modules: Database.PostgreSQL.Simple.Dynamic
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9 && < 4.13
                       , postgresql-simple ^>= 0.6
                     , containers
                     , uuid
                     , text
                     , transformers
                     , aeson
                     , bytestring
                     , time
                     , postgresql-libpq
  hs-source-dirs:      src
  default-language:    Haskell2010
